<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="tweetDetailUiState"
            type="com.enes.sahibindenenescase.view.TweetDetailUiState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height_size"
            android:background="@color/primary_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtToolbar"
                style="@style/tweet_toolbar_text_style"
                android:layout_centerInParent="true"
                android:text="@string/tweet_detail" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_left"
                app:tint="@color/black" />

        </RelativeLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/tweetUserPhoto"
            resources="@{tweetDetailUiState.image}"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:shapeAppearanceOverlay="@style/circle"
            app:srcCompat="@drawable/ic_twitter" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtSourceName"
            style="@style/tweet_card_title_text_style"
            android:layout_marginTop="16dp"
            android:text="@{tweetDetailUiState.source}"
            android:visibility="@{tweetDetailUiState.isSourceVisibility()}"
            app:layout_constraintBottom_toTopOf="@+id/txtTweetDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tweetUserPhoto"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:text="@string/source_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtTweetDate"
            style="@style/tweet_card_text_style"
            android:layout_marginTop="4dp"
            android:text="@{tweetDetailUiState.date}"
            android:visibility="@{tweetDetailUiState.isDateVisibility()}"
            app:layout_constraintBottom_toTopOf="@id/txtTweetAuthorId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tweetUserPhoto"
            app:layout_constraintTop_toBottomOf="@+id/txtSourceName"
            tools:text="@string/tweet_date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtTweetAuthorId"
            style="@style/tweet_card_text_style"
            android:layout_marginTop="4dp"
            android:text="@{tweetDetailUiState.authorId}"
            android:visibility="@{tweetDetailUiState.isAuthorIdVisibility()}"
            app:layout_constraintBottom_toTopOf="@id/txtTweet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tweetUserPhoto"
            app:layout_constraintTop_toBottomOf="@+id/txtTweetDate"
            tools:text="@string/tweet_author_id" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtTweet"
            style="@style/tweet_multi_text_style"
            android:layout_marginTop="4dp"
            android:text="@{tweetDetailUiState.text}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tweetUserPhoto"
            app:layout_constraintTop_toBottomOf="@+id/txtTweetAuthorId"
            tools:text="@string/tweet_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
