<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="tweetItemUiState"
            type="com.enes.sahibindenenescase.view.TweetItemUiState" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/tweetUserPhoto"
                resources="@{tweetItemUiState.image}"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="@+id/glStart"
                app:layout_constraintTop_toTopOf="@+id/glTop"
                app:shapeAppearanceOverlay="@style/circle"
                app:srcCompat="@drawable/ic_twitter" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtSourceName"
                style="@style/tweet_card_title_text_style"
                android:text="@{tweetItemUiState.source}"
                app:layout_constraintBottom_toTopOf="@+id/txtTweetDate"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toEndOf="@id/tweetUserPhoto"
                app:layout_constraintTop_toBottomOf="@id/glTop"
                tools:text="@string/source_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtTweetDate"
                style="@style/tweet_card_text_style"
                android:text="@{tweetItemUiState.createdDate}"
                app:layout_constraintBottom_toTopOf="@+id/txtTweet"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toEndOf="@id/tweetUserPhoto"
                app:layout_constraintTop_toBottomOf="@+id/txtSourceName"
                tools:text="@string/tweet_date" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtTweet"
                style="@style/tweet_card_multi_text_style"
                android:text="@{tweetItemUiState.text}"
                app:layout_constraintBottom_toBottomOf="@id/glBottom"
                app:layout_constraintEnd_toEndOf="@id/glEnd"
                app:layout_constraintStart_toEndOf="@id/tweetUserPhoto"
                app:layout_constraintTop_toBottomOf="@+id/txtTweetDate"
                tools:text="@string/tweet_description" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="8dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>